# swarm-simulation-with-spatial-partitioning

./: .gitignore  CMakeLists.txt  README.md  run.bat
include/app/: InputController.hpp
include/benchmark/: CpuTimer.hpp  CsvLogger.hpp  FrameStats.hpp
include/benchmark/results/: swarm_benchmark_speedup_shared_counts_presentation.csv  swarm_benchmark_summary_presentation.csv
include/core/: AgentData.hpp  AgentInitializer.hpp  BackendTiming.hpp  BackendType.hpp  SimulationBackend.hpp  SimulationParams.hpp
include/cpu/: CpuGridBackend.hpp  CpuNaiveBackend.hpp
include/gpu/: CudaAgentData.hpp  CudaGridBackend.hpp  CudaNaiveBackend.hpp  CudaSmokeTest.hpp
include/render/: AgentRenderer.hpp  OpenGLViewer.hpp  Shader.hpp
src/: main.cpp
src/app/: InputController.cpp
src/benchmark/: CsvLogger.cpp  FrameStats.cpp
src/core/: AgentData.cpp  AgentInitializer.cpp
src/cpu/: CpuGridBackend.cpp  CpuNaiveBackend.cpp
src/gpu/: CudaAgentData.cu  CudaGridBackend.cu  CudaNaiveBackend.cu  CudaSmokeTest.cu
src/render/: AgentRenderer.cpp  OpenGLViewer.cpp  Shader.cpp
